tests/query_errors/node_reserved_name_operator/error.txt
Error: 
    1 | define generic::counter operator counter;
    2 | create operator metrics from counter;
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Name `metrics` is reserved for built-in nodes, please use another name.
    3 | 
    4 | select event from in into metrics;
